<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ActivityProductos">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_backgroud"
        android:padding="5dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-16dp">

        <ImageView
            android:id="@+id/imageMarket"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/productos"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textProductos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/raleway_bold"
            android:gravity="center"
            android:text="Productos"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="35dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageMarket"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageCliente"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textProductos"
            app:layout_constraintTop_toTopOf="@+id/imageMarket"
            android:src="@drawable/perfiluser" />

        <TextView
            android:id="@+id/textNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lis Avila"
            android:textSize="16.5sp"
            android:fontFamily="@font/asap_semibold"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/imageCliente"
            app:layout_constraintTop_toBottomOf="@+id/imageCliente" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/viewDivider"
        app:layout_constraintTop_toBottomOf="@+id/layoutHeader">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layoutBebidas"
                android:layout_width="0dp"
                android:layout_height="152dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/white_rectangle_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="3dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toStartOf="@+id/layoutCarnes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/app_name"
                    android:padding="5dp"
                    android:src="@drawable/refresco" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/bebidas"
                    android:fontFamily="@font/quicksand_bold"
                    android:textColor="@color/colorAccent"
                    android:textSize="17dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutCarnes"
                android:layout_width="0dp"
                android:layout_height="152dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/white_rectangle_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="3dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/layoutBebidas"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/app_name"
                    android:padding="5dp"
                    android:src="@drawable/pcarnes" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/carnes"
                    android:fontFamily="@font/quicksand_bold"
                    android:textColor="@color/colorAccent"
                    android:textSize="17dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutLacteos"
                android:layout_width="0dp"
                android:layout_height="152dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/white_rectangle_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="3dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toStartOf="@+id/layoutCarnes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutBebidas">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/app_name"
                    android:padding="5dp"
                    android:src="@drawable/placteos" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lacteos"
                    android:fontFamily="@font/quicksand_bold"
                    android:textColor="@color/colorAccent"
                    android:textSize="17dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutBebes"
                android:layout_width="0dp"
                android:layout_height="152dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/white_rectangle_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="3dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/layoutBebidas"
                app:layout_constraintTop_toBottomOf="@+id/layoutCarnes">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/app_name"
                    android:padding="5dp"
                    android:src="@drawable/pbebes" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/para_bebes"
                    android:fontFamily="@font/quicksand_bold"
                    android:textColor="@color/colorAccent"
                    android:textSize="17dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutFrutasVerduras"
                android:layout_width="0dp"
                android:layout_height="152dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/white_rectangle_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="3dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toStartOf="@+id/layoutBebes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutLacteos">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/app_name"
                    android:padding="5dp"
                    android:src="@drawable/pverduras" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_bold"
                    android:gravity="center"
                    android:text="@string/frutas_verduras"
                    android:textColor="@color/colorAccent"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layoutOtross"
                android:layout_width="0dp"
                android:layout_height="152dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/white_rectangle_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="3dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/layoutLacteos"
                app:layout_constraintTop_toBottomOf="@+id/layoutBebes">

                <ImageButton
                    android:id="@+id/btnverpedidos"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:scaleType="fitCenter"
                    android:padding="5dp"
                    android:background="@color/colorWhite"
                    android:src="@drawable/pedido2"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Ver Pedidos"
                    android:fontFamily="@font/quicksand_bold"
                    android:textColor="@color/colorAccent"
                    android:textSize="17dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutOtros"
                android:layout_width="0dp"
                android:layout_height="152dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/white_rectangle_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="3dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/layoutLacteos"
                app:layout_constraintTop_toBottomOf="@+id/layoutBebes">

                <ImageButton
                    android:id="@+id/btncerrarc"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:scaleType="fitCenter"
                    android:layout_margin="5dp"
                    android:background="@color/colorWhite"
                    android:clickable="true"
                    android:padding="5dp"
                    android:src="@drawable/pedido2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_bold"
                    android:gravity="center"

                    android:text="Cerrar Pedido"
                    android:textColor="@color/colorAccent"
                    android:textSize="17dp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:backgroundTint="@color/colorWhite"
         app:itemIconSize="30dp"
         app:labelVisibilityMode="unlabeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:menu="@menu/navigation_menu"/>

    <View
        android:id="@+id/viewDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivider"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView" />


</androidx.constraintlayout.widget.ConstraintLayout>